trunk/src/parser/Footle.java
/* Generated By:JavaCC: Do not edit this line. Footle.java */
package parser;

import expression.*;
import value.*;
import Interpreter.*;
import staticpass.*;
import java.util.LinkedList;
import java.util.List;

import java.io.*;
/** Simple brace matcher. */
public class Footle implements FootleConstants {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    //Reader sr = new StringReader("testfile");
    Reader sr = null;
        try {
                sr = new FileReader("testfile");
        } catch (FileNotFoundException e) {
                // TODO Auto-generated catch block
                e.printStackTrace();
        }
    Footle parser = new Footle(sr);
    Expression tree = parser.Input();
    try {
                tree.getValue(null);
        } catch (ReturnException e) {
                // TODO Auto-generated catch block
                e.printStackTrace();
        } catch (TypeException e) {
                // TODO Auto-generated catch block
                e.printStackTrace();
        } catch (UnboundIdentifierException e) {
                // TODO Auto-generated catch block
                e.printStackTrace();
        }
    int temp = 0;
  }

/** Root production. */
  static final public Expression Input() throws ParseException {
 List<Expression> finList = new LinkedList<Expression>(); Expression finalExp;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case LPAREN:
      case VAR:
      case IF:
      case WHILE:
      case TRUE:
      case FALSE:
      case RETURN:
      case NEW:
      case NOT:
      case ISSTR:
      case STRLEN:
      case SUBSTRING:
      case PRINT:
      case STRINGEQUAL:
      case STRINGLESS:
      case ISINT:
      case ISFP:
      case ISVOID:
      case ISCLOSURE:
      case ISPLAIN:
      case FUNC:
      case ID:
      case NUM:
      case FLOAT:
      case STRING:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      finalExp = Statement();
                           finList.add(finalExp);
    }
    jj_consume_token(0);
   {if (true) return new Scope(new Sequence(finList));}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Statement() throws ParseException {
 Expression retVal = null; Expression retVal1 = null; Expression retVal2 = null;
  Token idval = null; Token funName = null; Token exp; List<Expression> finList = new LinkedList<Expression>();
  List<String> argList = new LinkedList<String>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      jj_consume_token(VAR);
      idval = jj_consume_token(ID);
      jj_consume_token(EQ);
      retVal = Expression();
      jj_consume_token(SEMI);
     {if (true) return new OpAssign(new OpVarDecl(idval.image), retVal);}
      break;
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_2(3)) {
        retVal = Expr();
        jj_consume_token(EQ);
        retVal1 = Expression();
        jj_consume_token(SEMI);
     {if (true) return new OpAssign(retVal, retVal1);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHILE:
          jj_consume_token(WHILE);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
          retVal1 = Statement();
     {if (true) return new OpWhile(retVal, new Scope(retVal1));}
          break;
        case ISINT:
          jj_consume_token(ISINT);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
     {if (true) return new IsType(IntValue.class, retVal);}
          break;
        case LBRACE:
          jj_consume_token(LBRACE);
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACE:
            case LPAREN:
            case VAR:
            case IF:
            case WHILE:
            case TRUE:
            case FALSE:
            case RETURN:
            case NEW:
            case NOT:
            case ISSTR:
            case STRLEN:
            case SUBSTRING:
            case PRINT:
            case STRINGEQUAL:
            case STRINGLESS:
            case ISINT:
            case ISFP:
            case ISVOID:
            case ISCLOSURE:
            case ISPLAIN:
            case FUNC:
            case ID:
            case NUM:
            case FLOAT:
            case STRING:
              ;
              break;
            default:
              jj_la1[1] = jj_gen;
              break label_2;
            }
            retVal1 = Statement();
                                    finList.add(retVal1);
          }
          jj_consume_token(RBRACE);
     {if (true) return new Scope(new Sequence(finList));}
          break;
        case IF:
          jj_consume_token(IF);
          jj_consume_token(LPAREN);
          retVal = Expression();
          jj_consume_token(RPAREN);
          retVal1 = Statement();
          if (jj_2_1(3)) {
            jj_consume_token(ELSE);
            retVal2 = Statement();
          } else {
            ;
          }
     {if (true) return new OpIfElse(retVal, retVal1, retVal2);}
          break;
        default:
          jj_la1[5] = jj_gen;
          if (jj_2_3(4)) {
            jj_consume_token(FUNC);
            funName = jj_consume_token(ID);
            jj_consume_token(LPAREN);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case ID:
              idval = jj_consume_token(ID);
                                                        argList.add(idval.image);
              label_3:
              while (true) {
                switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
                case COMMA:
                  ;
                  break;
                default:
                  jj_la1[2] = jj_gen;
                  break label_3;
                }
                jj_consume_token(COMMA);
                idval = jj_consume_token(ID);
                          argList.add(idval.image);
              }
              break;
            default:
              jj_la1[3] = jj_gen;
              ;
            }
            jj_consume_token(RPAREN);
            retVal1 = Statement();
     {if (true) return new OpFuncDecl(new Function(argList, new Scope(retVal1)), funName.image);}
          } else {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case RETURN:
              jj_consume_token(RETURN);
              retVal = Expression();
              jj_consume_token(SEMI);
     {if (true) return new Return(retVal);}
              break;
            case PRINT:
              jj_consume_token(PRINT);
              jj_consume_token(LPAREN);
              retVal = Expression();
              jj_consume_token(RPAREN);
              jj_consume_token(SEMI);
     {if (true) return new Print(retVal);}
              break;
            case LPAREN:
            case TRUE:
            case FALSE:
            case NEW:
            case NOT:
            case ISSTR:
            case STRLEN:
            case SUBSTRING:
            case STRINGEQUAL:
            case STRINGLESS:
            case ISFP:
            case ISVOID:
            case ISCLOSURE:
            case ISPLAIN:
            case FUNC:
            case ID:
            case NUM:
            case FLOAT:
            case STRING:
              retVal = Expression();
              jj_consume_token(SEMI);
     {if (true) return retVal;}
              break;
            default:
              jj_la1[6] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
 Expression retVal = null; Expression retVal1 = null; Expression retVal2 = null;
 Token val; Token idval;
 List<Expression> finList = new LinkedList<Expression>();
 List<String> argList = new LinkedList<String>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC:
      jj_consume_token(FUNC);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        idval = jj_consume_token(ID);
                              argList.add(idval.image);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_4;
          }
          jj_consume_token(COMMA);
          idval = jj_consume_token(ID);
                          argList.add(idval.image);
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      retVal = Statement();
     {if (true) return new ClosureValue(new Function(argList, new Scope(retVal)));}
      break;
    case ISSTR:
      jj_consume_token(ISSTR);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new IsType(StringValue.class, retVal);}
      break;
    case ISFP:
      jj_consume_token(ISFP);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new IsType(FloatValue.class, retVal);}
      break;
    case ISVOID:
      jj_consume_token(ISVOID);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new IsType(VoidValue.class, retVal);}
      break;
    case ISCLOSURE:
      jj_consume_token(ISCLOSURE);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new IsType(ClosureValue.class, retVal);}
      break;
    case ISPLAIN:
      jj_consume_token(ISPLAIN);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new IsType(PlainObject.class, retVal);}
      break;
    case STRLEN:
      jj_consume_token(STRLEN);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new StringLength(retVal);}
      break;
    case SUBSTRING:
      jj_consume_token(SUBSTRING);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(COMMA);
      retVal1 = Expression();
      jj_consume_token(COMMA);
      retVal2 = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new SubString(retVal, retVal1, retVal2);}
      break;
    case STRINGEQUAL:
      jj_consume_token(STRINGEQUAL);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(COMMA);
      retVal1 = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new OpStringEqual(retVal, retVal1);}
      break;
    case STRINGLESS:
      jj_consume_token(STRINGLESS);
      jj_consume_token(LPAREN);
      retVal = Expression();
      jj_consume_token(COMMA);
      retVal1 = Expression();
      jj_consume_token(RPAREN);
     {if (true) return new OpStringLess(retVal, retVal1);}
      break;
    default:
      jj_la1[13] = jj_gen;
      if (jj_2_4(4)) {
        idval = jj_consume_token(ID);
        jj_consume_token(LPAREN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
        case TRUE:
        case FALSE:
        case NEW:
        case NOT:
        case ISSTR:
        case STRLEN:
        case SUBSTRING:
        case STRINGEQUAL:
        case STRINGLESS:
        case ISFP:
        case ISVOID:
        case ISCLOSURE:
        case ISPLAIN:
        case FUNC:
        case ID:
        case NUM:
        case FLOAT:
        case STRING:
          retVal = Expression();
                             finList.add(retVal);
          label_5:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[9] = jj_gen;
              break label_5;
            }
            jj_consume_token(COMMA);
            retVal = Expression();
                                     finList.add(retVal);
          }
          break;
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        jj_consume_token(RPAREN);
    {if (true) return new OpFunctionCall(new IdValue(idval.image), finList);}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          jj_consume_token(NEW);
          idval = jj_consume_token(ID);
          jj_consume_token(LPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LPAREN:
          case TRUE:
          case FALSE:
          case NEW:
          case NOT:
          case ISSTR:
          case STRLEN:
          case SUBSTRING:
          case STRINGEQUAL:
          case STRINGLESS:
          case ISFP:
          case ISVOID:
          case ISCLOSURE:
          case ISPLAIN:
          case FUNC:
          case ID:
          case NUM:
          case FLOAT:
          case STRING:
            retVal = Expression();
                                                       finList.add(retVal);
            label_6:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case COMMA:
                ;
                break;
              default:
                jj_la1[11] = jj_gen;
                break label_6;
              }
              jj_consume_token(COMMA);
              retVal = Expression();
                                     finList.add(retVal);
            }
            break;
          default:
            jj_la1[12] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
     {if (true) return new OpNew(new IdValue(idval.image), finList);}
          break;
        default:
          jj_la1[14] = jj_gen;
          if (jj_2_5(4)) {
            retVal = Precedence();
    {if (true) return retVal;}
          } else if (jj_2_6(100)) {
            jj_consume_token(NOT);
            retVal = Expression();
     {if (true) return new Not(retVal);}
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression Precedence() throws ParseException {
 Expression retVal = null; Expression retVal2 = null;
    if (jj_2_7(10)) {
      retVal = PrecedenceSev();
      jj_consume_token(EQUAL);
      retVal2 = Precedence();
     {if (true) return new OpEquals(retVal, retVal2);}
    } else if (jj_2_8(10)) {
      retVal = PrecedenceSev();
     {if (true) return retVal;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression PrecedenceSev() throws ParseException {
 Expression retVal = null; Expression retVal2 = null;
    if (jj_2_9(10)) {
      retVal = PrecedenceSix();
      jj_consume_token(AND);
      retVal2 = PrecedenceSev();
     {if (true) return new And(retVal, retVal2);}
    } else if (jj_2_10(10)) {
      retVal = PrecedenceSix();
      jj_consume_token(OR);
      retVal2 = PrecedenceSev();
     {if (true) return new Or(retVal, retVal2);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case TRUE:
      case FALSE:
      case NOT:
      case ID:
      case NUM:
      case FLOAT:
      case STRING:
        retVal = PrecedenceSix();
     {if (true) return retVal;}
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression PrecedenceSix() throws ParseException {
 Expression retVal = null; Expression retVal2 = null;
    if (jj_2_11(10)) {
      retVal = PrecedenceFive();
      jj_consume_token(LTHEN);
      retVal2 = PrecedenceSix();
     {if (true) return new OpLessThan(retVal, retVal2);}
    } else if (jj_2_12(10)) {
      retVal = PrecedenceFive();
      jj_consume_token(LTE);
      retVal2 = PrecedenceSix();
     {if (true) return new OpLTE(retVal, retVal2);}
    } else if (jj_2_13(10)) {
      retVal = PrecedenceFive();
      jj_consume_token(GTHEN);
      retVal2 = PrecedenceSix();
     {if (true) return new OpGreaterThan(retVal, retVal2);}
    } else if (jj_2_14(10)) {
      retVal = PrecedenceFive();
      jj_consume_token(GTE);
      retVal2 = PrecedenceSix();
     {if (true) return new OpGTE(retVal, retVal2);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case TRUE:
      case FALSE:
      case NOT:
      case ID:
      case NUM:
      case FLOAT:
      case STRING:
        retVal = PrecedenceFive();
     {if (true) return retVal;}
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression PrecedenceFive() throws ParseException {
 Expression retVal = null; Expression retVal2 = null;
    if (jj_2_15(10)) {
      retVal = PrecedenceFour();
      jj_consume_token(DIVIDE);
      retVal2 = PrecedenceFive();
     {if (true) return new OpDivide(retVal, retVal2);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case TRUE:
      case FALSE:
      case NOT:
      case ID:
      case NUM:
      case FLOAT:
      case STRING:
        retVal = PrecedenceFour();
     {if (true) return retVal;}
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression PrecedenceFour() throws ParseException {
 Expression retVal = null; Expression retVal2 = null;
    if (jj_2_16(10)) {
      retVal = PrecedenceThree();
      jj_consume_token(PLUS);
      retVal2 = PrecedenceFour();
     {if (true) return new OpAdd(retVal, retVal2);}
    } else if (jj_2_17(10)) {
      retVal = PrecedenceThree();
      jj_consume_token(MINUS);
      retVal2 = PrecedenceFour();
     {if (true) return new OpAdd(retVal, retVal2);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case TRUE:
      case FALSE:
      case NOT:
      case ID:
      case NUM:
      case FLOAT:
      case STRING:
        retVal = PrecedenceThree();
     {if (true) return retVal;}
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression PrecedenceThree() throws ParseException {
 Expression retVal = null; Expression retVal2 = null;
    if (jj_2_18(10)) {
      retVal = PrecedenceTwo();
      jj_consume_token(MULT);
      retVal2 = PrecedenceThree();
     {if (true) return new OpMult(retVal, retVal2);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case TRUE:
      case FALSE:
      case NOT:
      case ID:
      case NUM:
      case FLOAT:
      case STRING:
        retVal = PrecedenceTwo();
     {if (true) return retVal;}
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression PrecedenceTwo() throws ParseException {
 Expression retVal = null; Expression retVal2 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      jj_consume_token(NOT);
      retVal = PrecedenceTwo();
     {if (true) return new Not(retVal);}
      break;
    case LPAREN:
    case TRUE:
    case FALSE:
    case ID:
    case NUM:
    case FLOAT:
    case STRING:
      retVal = PrecedenceOne();
     {if (true) return retVal;}
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Expression PrecedenceOne() throws ParseException {
 Expression retVal = null; Expression retVal2 = null;
    if (jj_2_19(10)) {
      retVal = Expr();
      jj_consume_token(DOT);
      retVal2 = PrecedenceOne();
     {if (true) return new OpAdd(retVal, retVal2);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case TRUE:
      case FALSE:
      case ID:
      case NUM:
      case FLOAT:
      case STRING:
        retVal = Expr();
     {if (true) return retVal;}
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }
